chandeliers-lus/tests/compile_fail/ui/tc/when-self.rs
//! Clock can't be the node itself.
chandeliers_lus::decl! {
    node foo(b : bool when b) returns ();
    let tel;
}

fn main() {}
